configure JWt options

--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Mango_Auth;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "AppSettings": {
+    "JwtOptions": {
+      "Secret": "dimuthuDissanayake",
+      "Issuer": "mango-auth-api",
+      "Audience": "mango-client"
+    }
   }
 }
