Assign role andadd DTO in web project

--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -9,9 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Mango_Auth;Trusted_Connection=True;TrustServerCertificate=True"
   },
-  "AppSettings": {
+  "ApiSettings": {
     "JwtOptions": {
-      "Secret": "dimuthuDissanayake",
+      "Secret": "dimuthuThilankaDissanayake 1994 SiridhammaCollege LabuduwaGalle MitraiInnovation MoratuwaColombo 940481775v",
       "Issuer": "mango-auth-api",
       "Audience": "mango-client"
     }
