--- a/Mango.Services.CouponAPI/appsettings.json
+++ b/Mango.Services.CouponAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Mango_Coupon;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+      "Secret": "dimuthuThilankaDissanayake 1994 SiridhammaCollege LabuduwaGalle MitraiInnovation MoratuwaColombo 940481775v",
+      "Issuer": "mango-auth-api",
+      "Audience": "mango-client" 
   }
 }
