Basic API setup

--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Mango_ShoppingCart;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "ApiSettings": {
+    "Secret": "dimuthuThilankaDissanayake 1994 SiridhammaCollege LabuduwaGalle MitraiInnovation MoratuwaColombo 940481775v",
+    "Issuer": "mango-auth-api",
+    "Audience": "mango-client"
+  }
 }
