--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -13,5 +13,8 @@
     "Secret": "dimuthuThilankaDissanayake 1994 SiridhammaCollege LabuduwaGalle MitraiInnovation MoratuwaColombo 940481775v",
     "Issuer": "mango-auth-api",
     "Audience": "mango-client"
+  },
+  "ServiceUrls": {
+    "ProductAPI": "https://localhost:7000"
   }
 }
